// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-canceled Renders \`extra-details-canceled\` with date in previous month 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Canceled</strong>
        <div>By : cancelled-author</div>
        <div>Date : 07/08/2013 19:00:00</div><div class=\\"c-extra-details__message\\">Comment : cancelled-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#607d8b"
      icon="delete"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` with full canceled 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Canceled</strong>
        <div>By : cancelled-author</div>
        <div>Date : 6:00:00</div><div class=\\"c-extra-details__message\\">Comment : cancelled-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#607d8b"
      icon="delete"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` without message 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Canceled</strong>
        <div>By : cancelled-author</div>
        <div>Date : 6:00:00</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#607d8b"
      icon="delete"
    />
  </c-simple-tooltip-stub>
</div>
`;
